# openbsc

openbsc/: configure.ac
openbsc/doc/: ipa-sccp.txt
openbsc/include/openbsc/: Makefile.am  gsm_data.h  gsm_data_shared.h
openbsc/src/gprs/: gb_proxy.c  gb_proxy_vty.c
openbsc/src/ipaccess/: ipaccess-config.c
openbsc/src/libbsc/: abis_nm.c  abis_rsl.c  bsc_rf_ctrl.c  bsc_vty.c  paging.c  system_information.c
openbsc/src/libcommon/: gsm_data.c  gsm_data_shared.c
openbsc/src/libmsc/: Makefile.am  gsm_04_08.c  vty_interface_layer3.c
openbsc/src/osmo-bsc_nat/: bsc_nat.c
openbsc/src/osmo-nitb/: bsc_hack.c
openbsc/src/utils/: Makefile.am  meas_feed_pcap.c
